# crewai-playground

./: .gitignore  LICENSE  README.md  cSpell.json  pyproject.toml  pyproject.toml.poetry  rag_config.yaml  resource_list.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
attic/: fc_test.py  invitro.py
attic/_attic/: blogger.py  crewcode.py  dev.py  dev2.py  docs_3b.py  docs_test.py  duck copy.py  research.py  search.py
attic/tools/: browser_tools.py  sec_tools.py
attic/trip/: travel_agents.py  trip.py
attic/utils/: llms.py
crewai_playground/: aifs_test.py  blog-post.py  blogger.py  crewcode.py  delegation.py  dev.py  dev2.py  docs_3b.py  docs_test.py  duck.py  llms.py  main.py  phi_llm.py  requirements.txt  result.md  travel_agents.py  travel_tasks.py
crewai_playground/config/: llm-config.yaml
crewai_playground/game/: agents.py  main.py  tasks.py
crewai_playground/llmconfig/: llm-config.yaml  llm.py  llmconfig.py
crewai_playground/tools/: aifs_tools.py  browser_tools.py  calculator_tools.py  code_interpreter_tools copy.py  file_management_tools.py  file_tools.py  python_tool.py  review_tool.py  review_tool_xml.py  reviewer_tool.py  xml_test.py
crews/article/: README.md  pyproject.toml
crews/article/src/article/: crew.py  llms.py  main.py
crews/article/src/article/config/: agents.yaml  tasks.yaml
crews/crewgen/: agent.yaml  pyproject.toml
crews/crewgen/crewgen/: crew.py  main.py
crews/crewgen/crewgen/config/: agents.yaml  tasks.yaml
crews/crewgen/input/: agents.md  crew.py  framework.md  tasks.md  tools.md
crews/crewgen/input/config/: agents.yaml  tasks.yaml
crews/obsidian/: note.md  project_note.md  pyproject.toml  refinement_result.md
crews/obsidian/db/: chroma.sqlite3
crews/obsidian/obsidian/: main.py
crews/storm/: README.md  article_outline.md  conversation_transcript.md  final_wikipedia_article.md  pyproject.toml  rag_config.yaml  research_findings.md
crews/storm/db/: chroma.sqlite3
crews/storm/src/storm/: crew.py  llms.py  main.py  wikipedia_article_draft.md
crews/storm/src/storm/config/: agents.yaml
crews/testgen/: README.md  pyproject.toml
crews/testgen/src/testgen/: crew.py  main.py
crews/testgen/src/testgen/config/: agents.yaml  tasks.yaml
crews/tooltest/: pyproject.toml
crews/tooltest/db/: chroma.sqlite3
crews/tooltest/src/tooltest/: dspy.py  exa.py  main.py
crews/tooltest/src/tooltest/tools/: spider_tool.py
crews/tooltest/tests/: spider_tool_test.py
crews/tooltest/tooltest/: main.py
scripts/: test.py
src/: markdown_editor.py  obsidian.py
src/_attic/: blog-post.py  blogger.py  crewcode.py  dev.py  dev2.py  docs_3b.py  docs_test.py  phi_llm.py  pyproject.toml.pdm  research.py  search.py
src/tools/: aifs_tools.py  browser_tools.py  review_tool.py  search_tools.py  websearch.py
src/tools/_attic/: code_interpreter_tools.py
src/trip/: travel_agents.py  travel_tasks.py
tests/: phi_llm_test.py
