[tool.poetry]
name = "crewai-playground"
version = "0.1.0"
description = "A collection of experimental crews"
authors = ["Olaf Geibig <olaf@pobox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
# crew projects
article = { path="./crews/article" }
storm = { path="./crews/storm" }
tooltest = { path="./crews/tooltest" }

# shared dependencies
crewai = {extras = ["tools"], version = "^0.36.1"}
langchain-groq = "^0.1.6"
langchain-openai = "^0.1.17"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.2"       

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
script = "scripts.test:run"

[tool.poe.tasks]
fix = "ruff  --preview check --fix ."
check_format = 'ruff format . --check --preview'
_sort_imports = "ruff check --select I --fix . --preview"
_format_code = "ruff format  . --preview"
_ruff_check = 'ruff check . --preview'