[tool.poetry]
name = "crewai-playground"
version = "0.1.0"
description = "A collection of experimental crews"
authors = ["Olaf Geibig <olaf@pobox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
# crew projects
article = { path = "./crews/article" }
storm = { path = "./crews/storm" }
tooltest = { path = "./crews/tooltest" }
crewgen = { path = "./crews/crewgen" }

# shared dependencies
crewai = { extras = ["tools"], version = "^0.51.0" }
langchain-groq = "^0.1.6"
langchain-openai = "^0.1.17"
langchain-google-genai = "^1.0.9"
spider-client = "^0.0.68"
langtrace-python-sdk = "^2.2.25"
dspy-ai = "^2.4.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.5.2"
mypy = "^1.11.0"
black = "^24.4.2"
ptyme-track = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
script = "scripts.test:run"

[tool.poe.tasks]
fix = "ruff  --preview check --fix ."
check_format = 'ruff format . --check --preview'
_sort_imports = "ruff check --select I --fix . --preview"
_format_code = "ruff format  . --preview"
_ruff_check = 'ruff check . --preview'
