[tool.poetry]
name = "article"
version = "0.1.0"
description = "article using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"

[tool.poetry.scripts]
crew = "article.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"