[tool.poetry]
name = "crewgen"
version = "0.1.0"
description = "crewgen using crewAI"
authors = ["Olaf Geibig <olaf@pobox.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"

[tool.poetry.scripts]
crewgen = "crewgen.main:run"
run_crew = "crewgen.main:run"
train = "crewgen.main:train"
replay = "crewgen.main:replay"
test = "crewgen.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
