[tool.poetry]
name = "storm"
version = "0.1.0"
description = "storm using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
embedchain = {extras = ["together"], version = "^0.1.94"}
sentence-transformers = "^2.5.1"
langchain-anthropic = "^0.1.4"

[tool.poetry.scripts]
storm = "storm.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"