[tool.poetry]
name = "tooltest"
version = "0.1.0"
description = ""
authors = ["Olaf <olaf@pobox.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crew = "tooltest.main:main"